Send SMS messages

--- a/app/views/name_email.html
+++ b/app/views/name_email.html
@@ -27,6 +27,13 @@
 				<input class="govuk-input" id="email-address" name="emailAddress" type="text" value="{{data['emailAddress']}}">
 			</div>
 
+			<div class="govuk-form-group">
+				<label class="govuk-label" for="phone-number">
+					Phone number to receive SMS messages
+				</label>
+				<input class="govuk-input" id="phone-number" name="phoneNumber" type="text" value="{{data['phoneNumber']}}">
+			</div>
+
 			<button class="govuk-button" data-module="govuk-button">Continue</button>
 
 		</form>
