Travel advice opening page; support multiple country selection

--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -47,15 +47,15 @@
         </div>
       </dl>
 
-      <h2 class="govuk-heading-m">Country to receive alerts for</h2>
+      <h2 class="govuk-heading-m">Countries to receive alerts for</h2>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Country
+            Countries
           </dt>
           <dd class="govuk-summary-list__value">
-			  {{data['country']}}
+			  {{data['countries'].join(', ')}}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="country">
