--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="name_email">Back</a>
+  <a class="govuk-back-link" href="friends-and-family">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -19,32 +19,34 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            First name
+            Alert Detail
           </dt>
           <dd class="govuk-summary-list__value">
-			  {{data['firstName']}}
+              <p class="govuk-body">{{data['firstName']}}</p>
+              <p class="govuk-body">{{data['emailAddress']}}</p>
+              <p class="govuk-body">{{data['phoneNumber']}}</p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="name_email">
               Change
-              <span class="govuk-visually-hidden"> first name</span>
             </a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Email address
-          </dt>
-          <dd class="govuk-summary-list__value">
-			  {{data['emailAddress']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-		  	<a href="name_email">
-              Change
-              <span class="govuk-visually-hidden"> email</span>
-            </a>
-          </dd>
-        </div>
+            <dt class="govuk-summary-list__key">
+              Friends and Family
+            </dt>
+            <dd class="govuk-summary-list__value">
+                <p class="govuk-body">{{data['friend1_email']}}</p>
+                <p class="govuk-body">{{data['friend2_email']}}</p>
+                <p class="govuk-body">{{data['friend3_email']}}</p>
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a href="friends-and-family">
+                Change
+              </a>
+            </dd>
+          </div>
       </dl>
 
       <h2 class="govuk-heading-m">Countries to receive alerts for</h2>
