--- a/app/views/country.html
+++ b/app/views/country.html
@@ -55,7 +55,7 @@
 
 		</form>
 
-		<button class="govuk-button" data-module="govuk-button" form="countryList">I'm finished</button>
+		<button class="govuk-button" data-module="govuk-button" form="countryList">Continue</button>
 	</div>
 </div>
 {% endblock %}
