--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -20,7 +20,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Alert Detail
+            Contact Details
           </dt>
           <dd class="govuk-summary-list__value">
               <p class="govuk-body">{{data['firstName']}}</p>
