--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -8,7 +8,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Add Friends and Family
+			Add friends and family
         </h1>
         <p>Invite friends and family to receive emergency alerts relating to your location overseas</p>
 		<form class="form" method="post" action="check-your-answers">
