Extra page for british nationals; copy updates

--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -10,7 +10,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">You’re subscribed to travel alerts</h1>
+        <h1 class="govuk-panel__title">You’re subscribed to emergency alerts</h1>
         <div class="govuk-panel__body">
           for {{data['countries'].join(', ')}}
         </div>
