--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -33,7 +33,7 @@
         {% if serviceName %} {{ serviceName }} {% endif %}
       </h1>
 
-		<p>Use this service to subscribe to travel alerts for your chosen countries.</p>
+		<p>Use this service to subscribe to emergency alerts for your chosen countries.</p>
 
       <p>Registering takes around 2 minutes.</p>
 
