--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -12,7 +12,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-xl">Check your answers before subscribing to travel alerts</h1>
+      <h1 class="govuk-heading-xl">Confirm your details before subscribing</h1>
 
       <h2 class="govuk-heading-m">Personal details</h2>
 
