--- a/app/views/country.html
+++ b/app/views/country.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="index">Back</a>
+<a class="govuk-back-link" href="british-national">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column">
 		<h1 class="govuk-heading-xl">
-			Choose which countries you'd like to get travel alerts for
+			Choose which countries you'd like to get emergency alerts for
 		</h1>
 			{% if data['countries'] and data['countries'].length %}
 		<form id="countryList" class="form" method="post" action="name_email">
