--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -9,9 +9,9 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Add friends and family
+			Invite friends and family to subscribe to emergency alerts
         </h1>
-        <p>Invite friends and family to receive emergency alerts relating to your location overseas</p>
+        <p>The email addresses you enter will receive emergency alerts relating to the countries you've selected.</p>
 		<form class="form" method="post" action="check-your-answers">
 			<div class="govuk-form-group">
 				<label class="govuk-label" for="email-address">
