--- a/app/views/index.html
+++ b/app/views/index.html
@@ -148,9 +148,8 @@
 						<ul class="gem-c-subscription-links__list">
 							<li class="gem-c-subscription-links__list-item">
 
-								<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/add_country?countryToAdd=Thailand">
-									NEW - get travel alerts for Thailand by email or text
-								</a>
+								<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="british-national">
+									NEW - subscribe to emergency alerts for Thailand by email or text (British Nationals)					</a>
 							</li>
 							<li class="gem-c-subscription-links__list-item">
 								<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/thailand/email-signup">           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>
