--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -9,9 +9,9 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Invite friends and family to subscribe to emergency alerts
+			Optional - invite friends and family to subscribe
         </h1>
-        <p>The email addresses you enter will receive emergency alerts relating to the countries you've selected.</p>
+        <p>You can invite other people to subscribe to emergency alerts for the countries you've selected, by entering their email addresses here.</p>
 		<form class="form" method="post" action="check-your-answers">
 			<div class="govuk-form-group">
 				<label class="govuk-label" for="email-address">
