--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -37,9 +37,11 @@
               Friends and Family
             </dt>
             <dd class="govuk-summary-list__value">
-                <p class="govuk-body">{{data['friend1_email']}}</p>
-                <p class="govuk-body">{{data['friend2_email']}}</p>
-                <p class="govuk-body">{{data['friend3_email']}}</p>
+                {% if data['emailaddresses'] and data['emailaddresses'].length %}
+                  {% for emailaddress in data['emailaddresses'] %}
+                    <p class="govuk-body">{{emailaddress}}</p>
+                  {% endfor %}
+			          {% endif %}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="friends-and-family">
