--- a/app/views/sms_1.html
+++ b/app/views/sms_1.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			SMS prototype (1)
+			Send an SMS emergency alert (1)
 		</h1>
 		<form class="form" method="post" action="sms_2">
 			<div class="govuk-form-group">
