--- a/app/views/sms_2.html
+++ b/app/views/sms_2.html
@@ -9,13 +9,13 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			SMS prototype (2)
+			Send an SMS emergency alert (2)
 		</h1>
 		<form class="form" method="post" action="sms_send">
 
 			<div class="govuk-form-group">
 				<h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="message">
-					Add your message
+					Message to send
 				</label>
 				</h1>
 				<textarea class="govuk-textarea" id="message" name="message" rows="5"></textarea>
