Copy tweaks / spacing

--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -33,7 +33,7 @@
       		<form class="form" method="post" action="add_emailaddress">
 			<div class="govuk-form-group">
 				<label class="govuk-label" for="emailaddressToAdd">
-					Email Address
+					Email address
 				</label>
                 <input class="govuk-input" id="emailaddressToAdd" name="emailaddressToAdd" type="text" />
 				<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
