--- a/app/views/name_email.html
+++ b/app/views/name_email.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Tell us where to send the emergency alerts to
+			Tell us where to send the emergency alerts
 		</h1>
 		<form class="form" method="post" action="friends-and-family">
 			<div class="govuk-form-group">
