--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -14,7 +14,7 @@
 
       <h1 class="govuk-heading-xl">Confirm your details before subscribing</h1>
 
-      <h2 class="govuk-heading-m">Personal details</h2>
+      <h2 class="govuk-heading-m">Where we will send the alerts</h2>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
@@ -75,7 +75,7 @@
         </div>
       </dl>
 
-      <h2 class="govuk-heading-m">Now send your subscription request</h2>
+      <p>If you're happy with these details, click the button to subscribe.</p>
 
       <form action="/confirmation" method="post" novalidate>
 
