Add ability to send a sample SMS alert

--- a/app/views/sms_2.html
+++ b/app/views/sms_2.html
@@ -11,16 +11,23 @@
 		<h1 class="govuk-heading-xl">
 			Send an SMS emergency alert (2)
 		</h1>
-		<form class="form" method="post" action="sms_send">
+		<form class="form" method="post" action="sms_send_free_text">
 
 			<div class="govuk-form-group">
 				<h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="message">
-					Message to send
+					Add some text to send
 				</label>
 				</h1>
 				<textarea class="govuk-textarea" id="message" name="message" rows="5"></textarea>
 			</div>
 
+			<button class="govuk-button" data-module="govuk-button">Send message</button>
+		</form>
+<br />
+<br />
+		<h2 class="govuk-heading-l">Or, send an example alert for Thailand</h2>
+
+		<form class="form" method="post" action="sms_send">
 			<button class="govuk-button" data-module="govuk-button">Send message</button>
 		</form>
 	</div>
