--- a/app/views/index.html
+++ b/app/views/index.html
@@ -98,7 +98,7 @@
 					<ul class="gem-c-subscription-links__list">
 						<li class="gem-c-subscription-links__list-item">
 
-							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="british-national">
+							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/add_country?countryToAdd=Thailand">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 510 510" width="18" height="18">
 									<path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm25.5 382.5h-51v-51h51v51zm0-102h-51v-153h51v153z"/>
 								</svg>&nbsp;
