--- a/app/views/british-national.html
+++ b/app/views/british-national.html
@@ -12,22 +12,33 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
-      <h1 class="govuk-heading-xl">
-		  Get emergency alerts by email or text
-	  </h1>
-		<p>This service lets you subscribe to receive emergency alerts, for Thailand and any additional countries you choose.</p>
-      <form class="form" action="country" method="get">
-        <p>This service is for British nationals only. Please confirm before continuing.</p>
+      <form class="form" action="is-british-national" method="post">
 		  <div class="govuk-form-group">
-		  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-			  <div class="govuk-checkboxes__item">
-				  <input class="govuk-checkboxes__input" id="contact" name="contact" type="checkbox" value="email" data-aria-controls="conditional-contact">
-				  <label class="govuk-label govuk-checkboxes__label" for="contact">
-					  I confirm that I'm a British national
-				  </label>
-			  </div>
-		  </div>
+			  <fieldset class="govuk-fieldset" aria-describedby="british-national-hint">
+				  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+					  <h1 class="govuk-heading-xl">
+						  Are you a British national?
+					  </h1>
+				  </legend>
+				  <div id="british-national-hint" class="govuk-hint">
+					This service is for British nationals only. Please confirm before continuing.
+				  </div>
+				  <div class="govuk-radios govuk-radios--inline">
+					  <div class="govuk-radios__item">
+						  <input class="govuk-radios__input" id="british-national" name="is-british-national" type="radio" value="yes">
+						  <label class="govuk-label govuk-radios__label" for="british-national">
+							  Yes
+						  </label>
+					  </div>
+					  <div class="govuk-radios__item">
+						  <input class="govuk-radios__input" id="british-national-2" name="is-british-national" type="radio" value="no">
+						  <label class="govuk-label govuk-radios__label" for="british-national-2">
+							  No
+						  </label>
+					  </div>
+				  </div>
+
+			  </fieldset>
 		  </div>
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
