Change 'text' to 'SMS'

--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -23,7 +23,7 @@
 		{% endif %}
 		{% if data['phoneNumber'] %}
 		<p>
-			We have sent a confirmation text message to {{data['phoneNumber']}}
+			We have sent a confirmation SMS message to {{data['phoneNumber']}}
 		</p>
 		{% endif %}
 		<br />
