Text tweaks on friends / family

--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -42,11 +42,11 @@
       	<form id="addEmailAddress" class="form" method="post" action="add_emailaddress">
 			<div class="govuk-form-group">
 				<label class="govuk-label" for="email-address">
-					Email Address
+					Email address
 				</label>
                 <input class="govuk-input" id="emailaddressToAdd" name="emailaddressToAdd" type="text">
                 <button class="govuk-button govuk-button--secondary" data-module="govuk-button" form="addEmailAddress">
-                    Add
+                    Add another
                 </button>
 			</div>
         </form>
