--- a/app/views/email_sms.html
+++ b/app/views/email_sms.html
@@ -53,17 +53,7 @@
 							 id="conditional-contact-3">
 							<div class="govuk-form-group">
 								<label class="govuk-label" for="contact-by-text">
-									Mobile phone number 1
-								</label>
-								<div id="telephone-number-hint" class="govuk-hint">
-									For international numbers include the country code eg 001
-								</div>
-								<input class="govuk-input govuk-!-width-one-third" id="phoneNumber" name="phoneNumber"
-									   type="tel" value="{{data['phoneNumber']}}" aria-describedby="telephone-number-hint" autocomplete="tel">
-							</div>
-							<div class="govuk-form-group">
-								<label class="govuk-label" for="contact-by-text">
-									Mobile phone number 2 (optional)
+									Mobile phone number
 								</label>
 								<div id="telephone-number-hint" class="govuk-hint">
 									For international numbers include the country code eg 001
