--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -26,7 +26,7 @@
               <p class="govuk-body">{{data['phoneNumber']}}</p>
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="name_email">
+            <a href="email_sms">
               Change
             </a>
           </dd>
