--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -1,7 +1,8 @@
+
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="name_email">Back</a>
+<a class="govuk-back-link" href="email_sms">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -9,49 +10,72 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-            Do you want to invite friends and family to subscribe?
+            Do you want to invite friends and family to subscribe ?
         </h1>
-        <p>You can invite other people to subscribe to emergency alerts for the countries you've selected, by entering their email addresses here.</p>
-        <form id="emailAddressList" class="form" method="post" action="check-your-answers">
-        {% if data['emailaddresses'] and data['emailaddresses'].length %}
-			<div class="govuk-form-group">
-				<fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-					<legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-						<h2 class="govuk-fieldset__heading">
-							List of email addresses
-						</h2>
-                    </legend>
-				</fieldset>
-            </div>
-        {% endif %}
-        </form>
-        {% if data['emailaddresses'] and data['emailaddresses'].length %}
-        <form id="removeemailaddress" class="form" method="post" action="remove_emailaddress"></form>
         <div class="govuk-form-group">
-            {% for emailaddress in data['emailaddresses'] %}
-                <p>{{emailaddress}}
-                <a href="/remove_emailaddress?email={{emailaddress}}"><button class="govuk-button  govuk-button--secondary" data-module="govuk-button">
-                    Remove
-                </button>
-                </a>
-                </p>
-            {% endfor %}
+            <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+                    <div class="govuk-radios__item">
+                        {% if data['emailaddresses'] and data['emailaddresses'].length %}
+                        <input class="govuk-radios__input" id="yes" name="invite" type="radio" value="yes" data-aria-controls="conditional-yes" checked>
+                        {% else %}
+                        <input class="govuk-radios__input" id="yes" name="invite" type="radio" value="yes" data-aria-controls="conditional-yes">
+                        {% endif %}
+                        <label class="govuk-label govuk-radios__label" for="yes">
+                        Yes
+                        </label>
+                    </div>
+                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-yes">
+                        <div class="govuk-form-group">
+                                <p>You can invite other people to subscribe to emergency alerts for the countries you've selected, by entering their email addresses here.</p>
+                                <form id="emailAddressList" class="form" method="post" action="check-your-answers">
+                                {% if data['emailaddresses'] and data['emailaddresses'].length %}
+                                    <div class="govuk-form-group">
+                                        <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                                                <h2 class="govuk-fieldset__heading">
+                                                    List of email addresses
+                                                </h2>
+                                            </legend>
+                                        </fieldset>
+                                    </div>
+                                {% endif %}
+                                </form>
+                                {% if data['emailaddresses'] and data['emailaddresses'].length %}
+                                <div class="govuk-form-group">
+                                    {% for emailaddress in data['emailaddresses'] %}
+                                        <p>{{emailaddress}}
+                                        <a href="/remove_emailaddress?email={{emailaddress}}"><button class="govuk-button  govuk-button--secondary" data-module="govuk-button">
+                                            Remove
+                                        </button>
+                                        </a>
+                                        </p>
+                                    {% endfor %}
+                                </div>
+                                {% endif %}
+                                <form id="addEmailAddress" class="form" method="post" action="add_emailaddress">
+                                    <div class="govuk-form-group">
+                                        <label class="govuk-label" for="email-address">
+                                            Email Address
+                                        </label>
+                                        <input class="govuk-input" id="emailaddressToAdd" name="emailaddressToAdd" type="text">
+                                        <button class="govuk-button govuk-button--secondary" data-module="govuk-button" form="addEmailAddress">
+                                            Add another
+                                        </button>
+                                    </div> 
+                                </form>
+                        </div>
+                    </div>
+                    <div class="govuk-radios__item">
+                        <input class="govuk-radios__input" id="no" name="invite" type="radio" value="no" data-aria-controls="conditional-no">
+                        <label class="govuk-label govuk-radios__label" for="no">
+                        No
+                        </label>
+                    </div>
+                </div>
+            </fieldset>
         </div>
-        </form>
-		{% endif %}
-      	<form id="addEmailAddress" class="form" method="post" action="add_emailaddress">
-			<div class="govuk-form-group">
-				<label class="govuk-label" for="email-address">
-					Email address
-				</label>
-                <input class="govuk-input" id="emailaddressToAdd" name="emailaddressToAdd" type="text">
-                <button class="govuk-button govuk-button--secondary" data-module="govuk-button" form="addEmailAddress">
-                    Add another
-                </button>
-			</div>
-        </form>
         <button class="govuk-button" data-module="govuk-button" form="emailAddressList">Continue</button>
-        </div>
 	</div>
 </div>
 {% endblock %}
