--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -28,9 +28,8 @@
 		{% endif %}
 		<br />
 		<hr />
-      <p><a href="https://www.gov.uk/service-manual/user-centred-design/resources/patterns/feedback-pages.html">What did you think of this service?</a> (takes 30 seconds)</p>
-
-
+      <p><a href="sample_email">See an example alert email</a></p>
+      <p><a href="sample_sms">See an example alert SMS</a></p>
     </div>
   </div>
 
